--- a/index.html
+++ b/index.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Mappa GTFS – Vector Tiles + Cluster</title>
+  <title>Mappa GTFS – Percorsi + Cluster</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!-- Leaflet -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-<!-- MapTiler SDK -->
-<link href="https://cdn.maptiler.com/maptiler-sdk-js/latest/maptiler-sdk.css" rel="stylesheet" />
-<script src="https://cdn.maptiler.com/maptiler-sdk-js/latest/maptiler-sdk.umd.min.js"></script>
+  <!-- Phosphor Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/bold/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css" />
 
-<!-- Leaflet plugin per MapTiler -->
-<script src="https://cdn.maptiler.com/leaflet-maptilersdk/latest/leaflet-maptilersdk.umd.min.js"></script>
-
-<!-- MarkerCluster -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
-<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <!-- MarkerCluster CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+  <!-- MapTiler CSS -->
+  <link href="https://cdn.maptiler.com/maptiler-sdk-js/latest/maptiler-sdk.css" rel="stylesheet" />
 
   <style>
-    html, body, #map { height: 100%; margin: 0; }
+    html,
+    body,
+    #map {
+      height: 100%;
+      margin: 0;
+    }
+
+    .toolbar {
+      position: absolute;
+      top: 1rem;
+      left: 1rem;
+      z-index: 1000;
+      width: 200px;
+    }
   </style>
 </head>
+
 <body>
   <div id="map"></div>
 
-  <!-- I tuoi dati fermate come variabile globale -->
-  <script src="public_data/stops.js"></script>
+  <!-- Toolbar -->
+  <div class="toolbar">
+    <div class="card shadow p-3">
+      <div class="d-grid gap-2">
+        <button id="btnReset" class="btn btn-sm btn-light border">⟳ Reset</button>
+        <button id="btnLocate" class="btn btn-sm btn-light border">📍 Centra</button>
+        <button id="btnCloseLine" class="btn btn-sm btn-danger" style="display: none">Chiudi linea</button>
+        <label class="form-label mt-2 mb-1">Ora:</label>
+        <input id="timePicker" type="time" class="form-control form-control-sm" />
+        <label class="form-label mt-2 mb-1">Data:</label>
+        <input id="datePicker" type="date" class="form-control form-control-sm" />
+      </div>
+    </div>
+  </div>
 
-  <!-- Logica mappa -->
+  <!-- JS in fondo -->
+  <!-- Leaflet -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <!-- MapTiler -->
+  <script src="https://cdn.maptiler.com/maptiler-sdk-js/latest/maptiler-sdk.umd.min.js"></script>
+  <script src="https://cdn.maptiler.com/leaflet-maptilersdk/latest/leaflet-maptilersdk.umd.min.js"></script>
+  <!-- MarkerCluster -->
+  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+  <script src="https://unpkg.com/leaflet.markercluster.freezable@1.0.0/dist/leaflet.markercluster.freezable.js"></script>
+  <!-- Polyline Offset -->
+  <script src="leaflet.polylineoffset.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Script custom -->
   <script src="script.js"></script>
 </body>
+
 </html>
