prova fix fetch json online

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster.freezable@1.0.0/dist/leaflet.markercluster.freezable.js"></script>
   <!-- Polyline Offset -->
-  <script src="leaflet.polylineoffset.js"></script>
+  <script src="/leaflet.polylineoffset.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Script custom -->
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
