--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Script custom -->
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
