--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
   <div id="map"></div>
-
+  
   <!-- Toolbar -->
   <div class="toolbar">
     <div class="card shadow p-3">
@@ -59,6 +59,8 @@
   </div>
 
   <!-- JS in fondo -->
+  <!-- Turf -->
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@7/turf.min.js"></script>
   <!-- Leaflet -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <!-- MapTiler -->
@@ -69,10 +71,12 @@
   <script src="https://unpkg.com/leaflet.markercluster.freezable@1.0.0/dist/leaflet.markercluster.freezable.js"></script>
   <!-- Polyline Offset -->
   <script src="./leaflet.polylineoffset.js"></script>
+  <script src="https://unpkg.com/leaflet.curve/leaflet.curve.min.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Script custom -->
   <script src="./script.js"></script>
 </body>
+
 
 </html>
